src/test/ui/nested-cfg-attrs.stderr
error[E0425]: cannot find function `f` in this scope
  --> $DIR/nested-cfg-attrs.rs:4:13
   |
LL | fn main() { f() }
   |             ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
